# stapel-tasks

./: .gitignore  CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  actions.py  admin.py  apps.py  checks.py  conf.py  conftest.py  dto.py  errors.py  features.py  functions.py  gdpr.py  models.py  policy.py  positioning.py  presets.py  pyproject.toml  scope.py  serializers.py  services.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
migrations/: 0001_initial.py
schemas/consumes/: user.deleted.json
schemas/emits/: task.archived.json  task.assigned.json  task.checklist_item_changed.json  task.comment_added.json  task.completed.json  task.created.json  task.moved.json  task.updated.json
schemas/functions/: tasks.comment.json  tasks.create.json  tasks.get.json  tasks.list_board.json  tasks.move.json
tests/: test_api.py  test_checks.py  test_comm.py  test_features.py  test_gdpr.py  test_positioning.py  test_public_api.py  test_seams.py  test_services.py  urls.py
