[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-tasks"
version = "0.1.4"
description = "Generic tasks and kanban boards for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "tasks", "kanban", "boards", "workflow"]
authors = [{ name = "Stapel" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<0.12",
    "djangorestframework>=3.14",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
# Soft integration: custom fields on cards are validated/normalized through
# stapel-attributes when it is installed. The module runs without it (the
# feature seam degrades to a pass-through) — install this extra to turn on
# typed custom-field validation.
attributes = ["stapel-attributes>=0.3,<0.4"]
all = ["stapel-attributes>=0.3,<0.4"]

[project.urls]
Homepage = "https://stapel.dev"
Repository = "https://github.com/usestapel/stapel-tasks"
Documentation = "https://github.com/usestapel/stapel-tasks/blob/main/MODULE.md"
Changelog = "https://github.com/usestapel/stapel-tasks/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-tasks/issues"

[tool.setuptools]
package-dir = {"stapel_tasks" = "."}
# NOTE: `stapel_tasks.tests` is deliberately NOT listed — flat layout would
# otherwise ship tests/ inside the wheel. Editable installs still resolve
# stapel_tasks.tests.urls for the test ROOT_URLCONF.
packages = ["stapel_tasks", "stapel_tasks.migrations"]

[tool.setuptools.package-data]
stapel_tasks = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
